UPDATE:add user management logic
